# task31

./: .gitignore  CMakeLists.txt  Chord.cpp  Chord.h  ChordExtractor.cpp  ChordExtractor.h  ChordMath.cpp  ChordMath.h  FilePointReader.cpp  FilePointReader.h  NaiveTriangulationAlgorithm.cpp  NaiveTriangulationAlgorithm.h  OptimizedTriangulationAlgorithm.cpp  OptimizedTriangulationAlgorithm.h  Point.cpp  Point.h  PointsReader.cpp  PointsReader.h  Polygon.cpp  Polygon.h  Triangulation.cpp  Triangulation.h  TriangulationAlgorithm.cpp  TriangulationAlgorithm.h  main.cpp  square.txt
Test/: AlgorithmTests.cpp  AlgorithmTests.h  Assert.cpp  Assert.h  ChordExtractorTest.cpp  ChordExtractorTest.h  ChordTest.cpp  ChordTest.h  FixtureFactory.cpp  FixtureFactory.h  PointsReaderTest.cpp  PointsReaderTest.h  PolygonInCircleTest.cpp  PolygonInCircleTest.h  RegularPolygonTest.cpp  RegularPolygonTest.h  TestRunner.cpp  TestRunner.h
TestCalss/: RegularPolygonCreator.h
TestClass/: PolygonInCircle.cpp  PolygonInCircle.h  RegularPolygon.cpp  RegularPolygon.h  RegularPolygonCreator.cpp  Test.cpp  Test.h
